
ADDED:

* Added "Log In" / "Log Out" to top menu by default, and gave authentication
  types the ability to populate that menu.

CHANGED:

* Separated WSGI server into separate process, and allow cs_wsgi_server_port to
  be a list to start multiple servers (for load balancing).

* Updated wsgi.py so that it can be used by an external WSGI server (such as
  uWSGI).

* cs_nosubmit_message is now sent only on an actual submission (not when
  viewing the page), so that the submit button still appears when loading pages
  with cs_nosubmit_message set.

* Buttons are now always created under 'view' mode in the default handler.

DEPRECATED:

REMOVED:

FIXED:

* Added CSS to prevent scrollbars from appearing on the CAT-SOOP logo in page
  footers.

* Fixed key generation for AES encryption in login authentication mode.

* Fixed a bug with changing password in login authentication mode.

* Fixed a bug with client-side password hashing so that the hash is now a
  proper PBKDF2 hash of the given password.

SECURITY:

DOCUMENTATION:


##################
# Version 11.1.1 #
##################

ADDED:

* Added the 'legacy' grading mode, which does not use the asynchronous checker.

CHANGED:

* Separated checker results into subdirectories to prevent a single directory
  growing too large.

* Helper scripts are now launched using sys.executable, rather than a
  hard-coded "python3".

* Checks run through the asynchronous checker now cache their results in the
  problemstate directory, to avoid having to do a double-lookup.

* Attempts at improved error reporting throughout CAT-SOOP.

REMOVED:

* Removed the PKiller class, which is no longer used anywhere.

FIXED:

* Temporary workaround for automatic scrolling to location of anchor.

* Fixed a bug with username/password-based access to the get_user_information
  API endpoint.

* Fixed a bug with the name of uploaded files.

SECURITY:

* The current session ID and API token are now filtered from error messages.

DOCUMENTATION:
